# rdkafkadart

./: .gitignore  .travis.yml  CMakeLists.txt  buildandroidlibs.sh  buildioslibs.sh  conanfile.py  generated_bindings.dart  pubspec.yaml  rdkafka.dart  readme.md
dart/: README.md  pubspec.yaml  rdkafka.dart
dart/android/: build.gradle
dart/android/src/main/: AndroidManifest.xml
dart/android/src/main/kotlin/com/example/dart/: DartPlugin.kt
dart/ios/: RdkafkaDart.podspec  dart.podspec
dart/ios/Classes/: DartPlugin.h  DartPlugin.m  SwiftDartPlugin.swift
dart/lib/: kafkaconsumer.dart  kafkaproducer.dart  rdkafkalibrary.dart
dart/lib/util/: util.dart
dart/test/: dart_test.dart  kafkaconsumer.dart  kafkaproducer.dart
profiles/: androidarmv7  androidarmv8  androidx86  androidx86_64  iosarmv7  iosarmv8  iosx86  iosx86_64
src/: consumer.cpp  consumer.h  producer.cpp  producer.h  rdkafkadart.cpp  rdkafkadart.h
test_package/: CMakeLists.txt
test_package/src/: consumer.cpp  producer.cpp  rdkafkadart.cpp
